# OblivionEdge

./: Cargo.toml  README.md  build-musl.sh  build_qcow2.sh  dev.sh  kernel_dev_setup.sh  patch-6.12.16-rt9.patch  rootfs.qcow2  run_qemu.sh  setup_vlan.sh  uboot_dev_setup.sh
alpine-minirootfs-3.21.0_rc6-x86_64/: init  password.txt
busybox-1.37.0/: .busybox_unstripped.cmd  .config  .config.old  busybox  busybox_unstripped  busybox_unstripped.map  busybox_unstripped.out
docs/: LICENSE_OEM.md  README_OEM.txt
oblivion-dev/: oblivion-dev.target
oblivion_ZTA/: Makefile  oblivion_zta.c  oblivion_zta_tpm.c  zta_lsm_with_dek_sha512.c
oblivion_admin_cli/: Cargo.toml
oblivion_inspector/: ..module-common.o.cmd  .Module.symvers.cmd  .modules.order.cmd  Makefile  (+6 more)
oblivion_webserver/webserver/: Cargo.toml  generate_encrypted_user_and_cert.sh  generate_secure_user.sh  generate_user_cert.sh  provision_user.sh
oblivion_webserver/webserver/certs/: ca.cert.pem  ca.cert.srl  ca.key.pem
oblivion_webserver/webserver/certs/users/1337_tech/: 1337_tech.cert.pem  1337_tech.cert.sha512  1337_tech.csr.pem  1337_tech.key.enc.pem  1337_tech.pub.pem
oblivion_webserver/webserver/certs/users/BlakeDrizzle/: encrypted_cert.pem
oblivion_webserver/webserver/certs/users/admin/: admin.cert.pem
oblivion_webserver/webserver/certs/users/cheaner/: cheaner.csr.pem  encrypted_cert.pem
oblivion_webserver/webserver/src/: main.rs
oblivion_webserver/webserver/src/controllers/: splash.rs
oblivion_webserver/webserver/src/models/: auth.rs
oblivion_webserver/webserver/src/views/: splash.html
(+949 files in other folders)
